# cmd/swag/docs/swagger.json
@@ -23,7 +23,7 @@
     "paths": {
         "/user/register": {
             "post": {
-                "description": "Verfiy OTP for login user",
+                "description": "Register User Using Verify Key",
                 "consumes": [
                     "application/json"
                 ],
@@ -33,7 +33,44 @@
                 "tags": [
                     "login"
                 ],
-                "summary": "Verify OTP",
+                "summary": "Register User",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RegisterInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user/verify_account": {
+            "post": {
+                "description": "Verfiy OTP login by user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "login"
+                ],
+                "summary": "Verify Account Using OTP",
                 "parameters": [
                     {
                         "description": "payload",
@@ -60,6 +97,20 @@
         }
     },
     "definitions": {
+        "model.RegisterInput": {
+            "type": "object",
+            "properties": {
+                "verify_key": {
+                    "type": "string"
+                },
+                "verify_purpose": {
+                    "type": "string"
+                },
+                "verify_type": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.VerifyOTPInput": {
             "type": "object",
             "properties": {
